--- a/_posts/2023-04-20-hello.md
+++ b/_posts/2023-04-20-hello.md
@@ -2,12 +2,14 @@
 title: My first blog
 date: 2023-04-20 19:43:00 +0800
 categories: [Jekyll, Github page]
-tags: [TAG]     # TAG names should always be lowercase
+tags:     # TAG names should always be lowercase
+math: true
 ---
 
 # 1. Welcome to my Blog
 1. The theme forks from [jekyll-theme-chirpy](https://chirpy.cotes.page/tags/https://github.com/cotes2020/jekyll-theme-chirpy)
 2. [Getting Started](https://chirpy.cotes.page/posts/getting-started/)
+3. [Writing a New Post](https://chirpy.cotes.page/posts/write-a-new-post/)
 
 # 2. Some points in setting up ( win11 )
 1. You should set up [Git](https://git-scm.com/) and [Ruby](https://rubyinstaller.org/downloads/), prompt to install MSYS2 by [1,2,3] at the same time
@@ -17,3 +19,9 @@ gem uninstall jekyll -v version(such as 3.8.5)
 ```
 3. Add ruby path (such as 'D:\Software\Ruby32-x64\bin') in system Path.
 4. [Getting Started with Chirpy ](https://chirpy.cotes.page/posts/getting-started/)
+5.  build the site on your local machine:
+```shell
+bundle exec jekyll s
+```
+
+> 尝试中文
