update some notes

--- a/_posts/2023-04-21-read.md
+++ b/_posts/2023-04-21-read.md
@@ -1,8 +1,23 @@
 ---
 title: nlp阅读计划
 date: 2023-04-20 19:43:00 +0800
-categories: [NLP, prompt]
+categories: [NLP]
 tags: [chatgpt, instruct]    # TAG names should always be lowercase
 ---
 
-# 1. 
+# 1. gpt
+## 1.1 主要任务
+1. gpt/gpt2 paper + 源码
+2. gpt3 + instruct 
+3. chatgpt相关应用
+4. 回到基础：采用pytorch实现
+    1. NER：BiLSTM+CRF
+    2. 关系抽取
+
+## 1.2 fine-tune
+初学者建议的fine-tune模型项目：
+1. 通过微调BERT模型来进行情感分析。
+2. 通过微调GPT-2模型来生成文本。
+3. 通过微调RoBERTa模型来进行中文命名实体识别
+
+## 
