--- a/_posts/2023-04-24-sa.md
+++ b/_posts/2023-04-24-sa.md
@@ -1,6 +1,8 @@
 ---
 title: 情感分析
 date: 2023-04-20 19:43:00 +0800
-categories: [NLP, 情感分析]
+categories: [NLP, SA]
 tags: [sa]    # TAG names should always be lowercase
 ---
+
+# 1. 
