--- a/_posts/2023-04-22-ner_1.md
+++ b/_posts/2023-04-22-ner_1.md
@@ -1,6 +1,6 @@
 ---
 title: 关系抽取-复现-
 date: 2023-04-20 19:43:00 +0800
-categories: [NLP, NER]
+categories: [NLP, 实体关系抽取]
 tags: [NER]    # TAG names should always be lowercase
 ---
