--- a/_posts/2023-04-24-sa.md
+++ b/_posts/2023-04-24-sa.md
@@ -1,7 +1,7 @@
 ---
 title: 情感分析
 date: 2023-04-20 19:43:00 +0800
-categories: [NLP, SA]
+categories: [NLP, 情感分析]
 tags: [sa]    # TAG names should always be lowercase
 ---
 
