--- a/_posts/2022-06-12-gnn.md
+++ b/_posts/2022-06-12-gnn.md
@@ -1,7 +1,7 @@
 ---
 title: 使用Colab搭建GNN，代码思路
 date: 2022-06-12 19:43:00 +0800
-categories: [GNN]
+categories: [图神经网络, GNN]
 tags:     # TAG names should always be lowercase
 math: true
 ---
