--- a/_posts/2023-03-23-nlp_notes1.md
+++ b/_posts/2023-03-23-nlp_notes1.md
@@ -46,4 +46,6 @@ $$
 ### 1.3.3 模型
 采用Tansformer为基础与OpenAI GPT模型作为架构
 ## 1.4 实验：阅读理解，摘要，问答，翻译
-### 1.4.1 
+> Some code: [Open AI](https://github.com/openai/gpt-2), [Transformers](https://github.com/huggingface/transformers)
+
+### 1.4.1 Some
