--- a/_posts/2023-03-23-nlp_notes1.md
+++ b/_posts/2023-03-23-nlp_notes1.md
@@ -1,7 +1,7 @@
 ---
 title: GPT/GPT2阅读笔记
 date: 2023-03-12 19:43:00 +0800
-categories: [NLP, Paper notes]
+categories: [自然语言处理, 论文阅读笔记]
 tags:     # TAG names should always be lowercase
 math: true
 ---
@@ -15,7 +15,7 @@ math: true
     1. 语言模型的容量对于任务转移很重要
     2. 以文档+问题输入，CoQA数据集F1值达到55
 3. GPT-2: 1.5B参数的Transformer: 探索建立通用语言处理系统可行性
-4. 目标：建立一个大语言模型，实现
+4. 目标：建立一个大语言模型，实现通用语言系统
 
 ## 1.1 相关工作
 1. 多任务学习，元学习
@@ -37,7 +37,7 @@ $$
 ## 1.3 训练集
 ### 1.3.1 WebText
 1. Common Crawl数据集，数量大并且有质量问题
-2. 偏重高质量采集：WebText
+2. 偏重高质量采集，获得：WebText
 ### 1.3.2 输入表示
  （LM）应该能够计算（并生成）任何字符串的概率，如何表示语料库中的tokens，字节级-性能损失大。单词级-任务一般性弱？
 > 1. 采用BPE算法，压缩token列表（将序列中频次最高的一对数据单位(Unicode)，替换为一个新的token） 
@@ -45,7 +45,34 @@ $$
 
 ### 1.3.3 模型
 采用Tansformer为基础与OpenAI GPT模型作为架构
-## 1.4 实验：阅读理解，摘要，问答，翻译
+## 1.4 源码阅读
 > Some code: [Open AI](https://github.com/openai/gpt-2), [Transformers](https://github.com/huggingface/transformers)
+对OpenAI版本源码解读
+### 1.4.1 encode.py
+> 目标：实现BPE算法功能，首先构建bpe词典
+1. 编码
+    1. 将bpe获取的bpe词典，以token的从大到小排序
+    2. 对于给定的word，遍历bpe词典，匹配时输出对应的token，而后对剩下的字符串匹配，未识别的字符串替换为<unk>
+    3. 编码后样例
+        ```
+        (“errrr</w>”, 
+        “tain</w>”, 
+        “moun”, 
+        “est</w>”, 
+        “high”, 
+        “the</w>”, 
+        “a</w>”)
+        ```
+2. 解码
+    1. 将子词输出，直到遇到</w>
+    2. 解码样例：
+    ```
+    ["moun", "tain</w>", "high", "the</w>"], Decode :
+    ["mountain</w>", "highthe</w>"]
+    ```
 
-### 1.4.1 Some
+```
+def byt
+```
+## 1.5 
+### 1.5.1 
