--- a/_posts/2023-04-21-read.md
+++ b/_posts/2023-04-21-read.md
@@ -1,7 +1,7 @@
 ---
 title: nlp阅读计划
 date: 2023-04-20 19:43:00 +0800
-categories: [NLP]
+categories: [自然语言处理]
 tags: [chatgpt, instruct]    # TAG names should always be lowercase
 ---
 
