--- a/_posts/2022-10-23-kr.md
+++ b/_posts/2022-10-23-kr.md
@@ -31,41 +31,46 @@ KG的基础是通过图抽象数据，获取初始数据图，本部分介绍图
 1. 关系型数据库，如(Event)的初始表结构：
 > Event(\underline{name}, venue, type, \underline{start}, end)
 其中name和start作为主键，随着数据的多样性增加，如一个活动多个地点，多个名字等
+
 2. 随着迭代关系模式的设计，如果同一活动的所有的column都不唯一：
 > EventName(id, name), EventStart(id, start), EventEnd(id, end), EventVenue(id, venue), EventType(id, type)
+
 3. 对于来源多变化的数据，关系数据库可能会需要多次迭代
 常见的图数据模型：
 ### 1.1.1 有向标记图
 > 有向标记图（directed edge-labelled graphs）定义为节点以及节点之间有向标记边的集合。在知识图谱中，节点用于表示实体，而边则用于表示实体间的（二元）关系.
-1. 有向标记图的标准化数据模型: 资源描述框架（RDF）
-2. RDF 模型定义了不同类型的节点，包括国际化资源标识符（IRIs）、字面量（literals）和空白节点（blank nodes）
-3. 国际化资源标识符表示网络上实体的国际化标识符，字面量则表示字符串或其他数据类型值（比如整数、日期等），空白节点也称匿名节点，用来表示没有分配标识符的实体
+
+    1. 有向标记图的标准化数据模型: 资源描述框架（RDF）
+    2. RDF 模型定义了不同类型的节点，包括国际化资源标识符（IRIs）、字面量（literals）和空白节点（blank nodes）
+    3. 国际化资源标识符表示网络上实体的国际化标识符，字面量则表示字符串或其他数据类型值（比如整数、日期等），空白节点也称匿名节点，用来表示没有分配标识符的实体
 ### 1.1.2 图数据集
-同时管理多个图
-1. 图数据集通常由一系列的命名图（named graphs）和一个默认图（default graph）组成
-2. 每个命名图都包含 graph ID 和图；默认图(元数据)没有 ID ，当 ID 未指定时作为默认的引用
-3. 一个关于图数据集的经典案例即管理和查询键连数据（Linked Data），其由网络上的 RDF 形式的相关联文档组
+    同时管理多个图
+    1. 图数据集通常由一系列的命名图（named graphs）和一个默认图（default graph）组成
+    2. 每个命名图都包含 graph ID 和图；默认图(元数据)没有 ID ，当 ID 未指定时作为默认的引用
+    3. 一个关于图数据集的经典案例即管理和查询键连数据（Linked Data），其由网络上的 RDF 形式的相关联文档组
 ### 1.1.3 属性图
 例如加入航班的相关信息属性图，需要添加节点，会对原图结构产生巨大改变
 > 属性图允许为节点和边关联一个标签（label）和一系列的属性-值对（property-value）
-1. 属性图可以在没有信息丢失的情况下和有向标记图或图数据集相互转化
-有向标记图可以提供更加轻量化的模型，而属性图则可以通过更加灵活的模型
+
+    1. 属性图可以在没有信息丢失的情况下和有向标记图或图数据集相互转化有向标记图可以提供更加轻量化的模型，而属性图则可以通过更加灵活的模型
 
 ## 2.2 查询
 RDF 图的 SPARQL 查询语言，用于查询属性图的 Cypher、Gremlin 和 G-CORE.以下介绍一些图查询语言的通性
 ### 2.2.1 图模型
 > 基础图模式（graph patterns）是所有结构化图查询语言的核心
+
 1. 图模式中的项可以分为常量与变量两种，变量通过问号前缀来进行区分
 2. 
 ### 2.2.2 复杂图模型
 > 复杂图模式: 对基础图模式添加关系代数
 关系代数主要由一元操作符（接收单个输入）和二元操作符（接收两个输入）构成，其中一元操作符主要包括:
-* 投影（projection）：输出列的子集
-* 选择（selection）：输出满足条件的行的子集
-* 重命名（renaming）：将列重命名
-二元操作符主要包括：
-* 联合（union）：将两张输入表的行合并
-* 差分（difference）：将第一张表中出现在第二张表的行去除
-* 联合（join）：基于联合条件将一张表的行扩展到另一张表
+
+    * 投影（projection）：输出列的子集
+    * 选择（selection）：输出满足条件的行的子集
+    * 重命名（renaming）：将列重命名
+    二元操作符主要包括：
+    * 联合（union）：将两张输入表的行合并
+    * 差分（difference）：将第一张表中出现在第二张表的行去除
+    * 联合（join）：基于联合条件将一张表的行扩展到另一张表
 ### 2.2.3 导航图模式
 
