--- a/_posts/2022-10-23-kr.md
+++ b/_posts/2022-10-23-kr.md
@@ -7,7 +7,7 @@ math: true
 ---
 
 # 1. Introduction
-本文参考了(Knowledge Graphs)[https://arxiv.org/abs/2003.02320]
+本文参考了[Knowledge Graphs](https://arxiv.org/abs/2003.02320)
 1. 知识图谱
     1. 核心思想：使用图来表示数据，显示的表示知识
     2. 与关系模型相比，图提供schema，适用于获取不完整的知识
@@ -61,6 +61,7 @@ RDF 图的 SPARQL 查询语言，用于查询属性图的 Cypher、Gremlin 和 G
 
 1. 图模式中的项可以分为常量与变量两种，变量通过问号前缀来进行区分
 2. 
+
 ### 2.2.2 复杂图模型
 > 复杂图模式: 对基础图模式添加关系代数
 关系代数主要由一元操作符（接收单个输入）和二元操作符（接收两个输入）构成，其中一元操作符主要包括:
