--- a/_posts/2022-10-23-kr.md
+++ b/_posts/2022-10-23-kr.md
@@ -2,12 +2,12 @@
 title: 知识图谱入门
 date: 2022-06-12 19:43:00 +0800
 categories: [知识图谱]
-tags:     # TAG names should always be lowercase
+tags: [KG]  # TAG names should always be lowercase
 math: true
 ---
 
 # 1. Introduction
-本文参考了(Knowledge Graphs)[https://arxiv.org/abs/2003.02320]
+本文参考了[Knowledge Graphs](https://arxiv.org/abs/2003.02320)
 1. 知识图谱
     1. 核心思想：使用图来表示数据，显示的表示知识
     2. 与关系模型相比，图提供schema，适用于获取不完整的知识
