--- a/_posts/2023-7-9-git.md
+++ b/_posts/2023-7-9-git.md
@@ -1,8 +1,8 @@
 ---
-title: 情感分析
+title: 7.9日笔记，git与spring
 date: 2023-07-9 12:43:00 +0800
-categories: [自然语言处理, 情感分析]
-tags: [sa]    # TAG names should always be lowercase
+categories: [笔记, 2023.7.9]
+tags: [git, SpringBoot]    # TAG names should always be lowercase
 ---
 
 # 1. git 命令
