--- a/_posts/2023-03-12-flask.md
+++ b/_posts/2023-03-12-flask.md
@@ -1,7 +1,7 @@
 ---
 title: flask搭建
 date: 2022-06-12 19:43:00 +0800
-categories: [python]
+categories: [python, flask]
 tags: [flask]  # TAG names should always be lowercase
 math: true
 ---
