--- a/_posts/2023-03-12-flask.md
+++ b/_posts/2023-03-12-flask.md
@@ -5,3 +5,12 @@ categories: [PYTHON, 前端]
 tags: [flask]  # TAG names should always be lowercase
 math: true
 ---
+
+# 1. A WTACHLIST DEMO FOR STUDYING FLASK
+1. 项目主要参考Grey Li的 [Flask 入门教程](https://github.com/helloflask/watchlist)
+
+# 2. app.py
+1. 项目代码集成在app.py
+2. export (win使用set) 设置 FLASKAPP = app.py，使flask程序找到实例化的app = Flask(\__name__)程序实例
+3. 或 python-dotenv 在根目录设置.flaskenv文件，写入``` export FLASKAPP=app.py ``` ，作用与 2.相同
+4. flask run  执行flask程序，自动调用5000端口
