--- a/_posts/2022-10-23-kr.md
+++ b/_posts/2022-10-23-kr.md
@@ -2,7 +2,7 @@
 title: 知识图谱入门
 date: 2022-10-23 19:43:00 +0800
 categories: [知识图谱,KG]
-tags: [KG]   # TAG names should always be lowercase
+tags: [kg]   # TAG names should always be lowercase
 math: true
 ---
 
