--- a/_posts/2023-07-09-git.md
+++ b/_posts/2023-07-09-git.md
@@ -2,7 +2,7 @@
 title: 7.9日笔记，git与spring
 date: 2023-07-09 12:43:00 +0800
 categories: [笔记, 7月9日]
-tags: [git, SpringBoot]    # TAG names should always be lowercase
+tags: [git, springboot]    # TAG names should always be lowercase
 ---
 
 # 1. git 命令
