--- a/_posts/2022-08-09-ff.md
+++ b/_posts/2022-08-09-ff.md
@@ -22,8 +22,8 @@ math: true
 ├── app.py #
 ├── static  # 静态文件
 │     ├── images   # 图片
-│     └── style.css  # css样式表
-└── templates # 模板
+│      ── style.css  # css样式表
+ ── templates # 模板
       |-- index.html
 ```
 1. 使用装饰器@app.route('/url')装饰路由，示例:
@@ -73,7 +73,7 @@ def hello(): # 视图函数
 # 项目文件结构如下
 ├── .flaskenv   #
 ├── test_watchlist.py
-└── watchlist  # 程序包
+ ── watchlist  # 程序包
     ├── __init__.py
     ├── commands.py
     ├── errors.py
@@ -82,8 +82,8 @@ def hello(): # 视图函数
     ├── static
     │   ├── favicon.ico
     │   ├── images
-    │   └── style.css
-    └── templates
+    │    ─ style.css
+     ── templates
        |-- base.html
        |-- edit.html
        |-- 404.html
