--- a/_posts/2022-08-09-ff.md
+++ b/_posts/2022-08-09-ff.md
@@ -61,9 +61,9 @@ def hello(): # 视图函数
 2. class User(db.Model, UserMixin):  # 继承UserMixin，使User有用于判断认证状态的属性和方法
 3. 装饰器@login_required，未登录视图保护
 4. login_manager.login_view 的值设为登录视图端点（函数名）
-5. 模板中可用\{\% if current_user.is_authenticated \%\}判断用户权限以选择性渲染
+5. 模板中可用 if current_user.is_authenticated 判断用户权限以选择性渲染
 
-# 3. 组织代码
+# 3. 
 1. 拆分app.py文件
 2. 运行时若db报错，先用flask forge创建数据库
 3. pip 添加 requirements.txt
