--- a/_posts/2022-08-09-ff.md
+++ b/_posts/2022-08-09-ff.md
@@ -47,7 +47,7 @@ def hello(): # 视图函数
 2. 使用 SQLAlchemy 操作数据库, db=SQLAlchemy(app)
 3. class DataName(db.Models):   # 声明数据库模型
 * db.session.* 对数据库db进行操作, 每次数据操作需要db.session.commit()至数据库
-* DataName.query.<过滤方法（可选）>.<查询方法>
+* DataName.query.\<过滤方法（可选）\>.\<查询方法\>
 
 ## 2.3 表单Form
 1. html设置form与method，app.route设置可接收的methods
@@ -67,3 +67,27 @@ def hello(): # 视图函数
 1. 拆分app.py文件
 2. 运行时若db报错，先用flask forge创建数据库
 3. pip 添加 requirements.txt
+
+```
+数据库模型 -> models.py
+# 项目文件结构如下
+├── .flaskenv   #
+├── test_watchlist.py
+└── watchlist  # 程序包
+    ├── __init__.py
+    ├── commands.py
+    ├── errors.py
+    ├── models.py
+    ├── views.py
+    ├── static
+    │   ├── favicon.ico
+    │   ├── images
+    │   └── style.css
+    └── templates
+       |-- base.html
+       |-- edit.html
+       |-- 404.html
+       |-- index.html
+       |-- login.html
+       |-- settings.html
+```
